# learning-openai-agents-sdk

./: 01_streaming.py  README.md  dynamic_instruciton.py  handoff_filter.py  handsoff.py  handsoff_advance.py  pyproject.toml  simple_agent.py  tool_choices.py
src/learning_openai_agents_sdk/: __init__.py
